build: new Mockito plugin